Abbreviations and symbols

--- a/text/abbreviations.tex
+++ b/text/abbreviations.tex
@@ -1,29 +1,135 @@
 % First parameter can be changed eg to "Glossary" or something.
 % Second parameter is the max length of bold terms.
 \begin{mclistof}{A List of Symbols and Abbreviations}{3.2cm}
-
-\item[$e$] Absolute charge of an electron = \qty{1.602e-19}{C}
+\item[Note] All quantities are defined in SI units unless otherwise specified throughout the thesis.
+\item[$\alpha$] Twiss parameter = $-\frac{\langle x_i x'_i \rangle}{\epsilon^i_\mathrm{rms}}$
+\item[$a_0$] Normalised vector potential $= \frac{e|\mathbf{E}_\mathrm{L}|}{m_\mathrm{e}c\omega_\mathrm{L}}$
+\item[$A$] Atomic mass number
+\item[$\mathbf{A}$] Three-vector potential
+\item[$\mathbf{A}^\mu$] Four-vector potential = $(\phi/c, \mathbf{A})$
+\item[$\beta$] Normalised speed $= v/c$ or Twiss parameter $= \frac{\langle x_i \rangle}{\epsilon^i_\mathrm{rms}}$
+\item[$\mathbf{\beta}$] Normalised velocity $= \mathbf{v}/c$
+\item[$\mathbf{B}$] Magnetic field
+\item[$\mathbf{B}_\mathrm{L}$] Magnetic field of a laser pulse
+\item[$c$] Speed of light = \qty{3.00e8}{m.s^{-1}}
+\item[$\delta$] Skin depth
+\item[$\delta(\mathbf{x})$] Dirac-delta function
+\item[$d\mathbf{s}$] Vector line element
+\item[$\Delta$] Change in a variable
+\item[$D$] Number of dimensions
+\item[$\mathbf{\nabla}$] Partial derivative $= \hat{\mathbf{x}}_\mu \frac{\partial }{\partial x_\mu}$, $\mu = x,y,z$
 \item[$\epsilon_0$] Permittivity of free space = \qty{8.854e-12}{F.m^{-1}}
-\item[$\lambda_D$]Debye length $\equiv \sqrt{\frac{\epsilon_0KT_e}{n_ee^2}}$
-\item[$n_e$] Plasma electron number density as a function of position
-\item[$n_i$] Plasma ion number density as a function of position
+\item[$\epsilon_\mathrm{rms}$] Transverse geometric emittance
+\item[$\epsilon_\mathrm{n,rms}$] Transverse normalised emittance
+\item[$e$] Absolute charge of an electron = \qty{1.602e-19}{C}
+\item[$e^\pm$] Electron ($-$) or positron (+)
+\item[$\mathbf{E}$] Electric field
+\item[$E_\mathrm{S}$] Schwinger electric field = \qty{1.3e18}{V.m^{-1}}
+\item[$\mathbf{E}_\mathrm{L}$] Electric field of a laser pulse
+\item[$f$] Distribution function
+\item[$\mathbf{F}_\mathrm{L}$] Lorentz force = $q(\mathbf{E}+ \mathbf{v}\times \mathbf{B})$
+\item[$\gamma$] Lorentz/gamma factor $= \frac{1}{\sqrt{1-\beta^2}}$ or Twiss parameter $= \frac{\langle x'^2_i\rangle}{\epsilon^i_\mathrm{rms}}$ or high-energy photon
+\item[$\eta$] Efficiency
+\item[$I$] Electromagnetic field intensity
+\item[$\mathcal{H}$] Hamiltonian
+\item[$\theta$] Angle of incidence of a laser pulse
+\item[$\mathbf{J}$] Currrent density
+\item[$\mathbf{k}$] Electromagnetic three-wave vector
+\item[$\mathbf{K}^\mu$] Electromagnetic four-wave vector = $(\omega/c \mathbf{k})$
+\item[$K$] Boltzmann constant = \qty{1.38e-23}{J.K^{-1}}
+\item[$\lambda_\mathrm{D}$] Debye length $\equiv \sqrt{\frac{\epsilon_0KT_e}{n_ee^2}}$
+\item[$\lambda_\mathrm{L}$] Laser pulse wavelength
+\item[$\Lambda^\mu_\nu$] Lorentz transformation matrix
+\item[$L$] Length 
+\item[$\mathcal{L}$] Lagrangian
+\item[$\mu_0$] Vacuum permeability = \qty{1.257e-6}{N.A^{-2}}
+\item[$m_\mathrm{e}$] Mass of an electron = \qty{9.11e-31}{kg}
+\item[$n$] Harmonic order
+\item[$n,N$] Number
+\item[$n_\mathrm{c}$] Plasma critical density = $\frac{\omega^2_\mathrm{L}m_\mathrm{e}\epsilon_0}{e^2}$
+\item[$n_\mathrm{e}$] Plasma electron number density
+\item[$\bar{n}_\mathrm{e}$] Normalised plasma electron number density = $\frac{n_\mathrm{e}}{n_\mathrm{c}}$
+\item[$n_\mathrm{i}$] Plasma ion number density
+\item[$\mathbf{n}$] Vector normal to a surface
+\item[$N_\mathrm{A}$] Avogadro's number
+\item[$N_\mathrm{D}$] Number of particles within the Debye sphere $= \frac{4}{3}\pi \lambda^3_\mathrm{D}n$
+\item[$\omega$] Angular frequency of an oscillation or low energy photon
+\item[$\omega_\mathrm{L}$] Laser pulse angular frequency
+\item[$\omega_\mathrm{P}$] Plasma frequency $= \sqrt{\frac{e^2n_\mathrm{e}}{m_\mathrm{e}\epsilon_0}}$
+\item[$\phi$] Angle of laser polarisation out of the plane of interaction or scalar electromagnetic potential
+\item[$\mathbf{p}$] Three-momentum
+\item[$\mathbf{P}$] Pressure
+\item[$\mathbf{P}^\mu$] Four-momentum = $(U/c, \mathbf{p})$
+\item[$Q$] Charge
+\item[$\rho$] Density
+\item[$r_\mathrm{L}$] Relativistic Larmor radius  = $\frac{\gamma m_\mathrm{e} v}{e|mathbf{B}|}$
+\item[$\mathbf{r}$] Radial vector
+\item[$\hat{\mathbf{r}}$] Radial unit vector
+\item[$R$] Rate
+\item[$\sigma$] Surface area
+\item[$S$] Relativistic similarity parameter = $\bar{n}_\mathrm{e}/a_0$
+\item[$S(\mathbf{x})$] Shape function
+\item[$\tau$] Average time or standard deviation of time
+\item[$t$] Time
+\item[$T$] Kinetic energy
 \item[$T_e$] Plasma electron temperature
+\item[$u,v$] Speed
+\item[$\mathbf{u},\mathbf{v}$] Velocity
+\item[$U$] Energy
+\item[$v_\phi$] Phase velocity
+\item[$V$] Potential or volume
+\item[$w_\mathrm{L}$] Beam waist
+\item[$w_p$] Quasi-particle weight
+\item[$\chi_\gamma$] Photon quantum parameter
+\item[$x$, $y$, $z$] Standard Cartesian coordinates in 3D
+\item[$\mathbf{x}$, $\mathbf{y}$, $\mathbf{z}$] Vectors along each axis of the Cartesian coordinate system
+\item[$\hat{\mathbf{x}}$, $\hat{\mathbf{y}}$, $\hat{\mathbf{z}}$] Unit vectors along each axis of the Cartesian coordinate system
 \item[$Z$] Ion charge state in units of $e$
+\item[Subscripts] The following are defined the subscripts
+\item[$\mathrm{C}$] Pseudocapacitor
+\item[$\mathrm{e}$] Electron
+\item[$\gamma$] Photon
+\item[L] Laser pulse or Longitudinal
+\item[T] Transvere to a laser pulse
+\item[pol] Along the polarisation vector of a laser pulse
+\item[$\perp$] Perpendicular
+\item[$\|$] Parallel
+\item[$i$, $j$] Indices
+\item[$s$] Species
+\item[$x$, $y$, $z$] Along the specific Cartesian axes
+\item[$\infty$] 
+\item[The hat symbol] To represent a normalised vecotr
+\item[primed coordinates and reference frames] Still need to sort
 
 \item[1D, 2D, 3D] One-, two- or three-dimension(al)
-
-\item[Otter] One of the finest of water mammals.
-
-\item[Hedgehog] Quite a nice prickly friend.
+\item[BW] Breit-Wheeler
+\item[CLF] Central Laser Facility
+\item[CPA] Chirped Pulse Amplification
+\item[FDTD] Finite Difference Time Domain
+\item[HB] Hole Boring
+\item[HHG] High Harmonic Generation
+\item[OHREX] ORION High Resolution X-ray
+\item[PIC] Particle-In-Cell
+\item[QED] Quantum Electro-Dynamics
+\item[RR] Radiation Reaction
+\item[SF-QED] Strong-Field Quantum Electro-Dynamics
+\item[ZVP] Zero Vector Potential
 
 \begin{acronym}
 	\acro{1D}{one-dimension}
 	\acro{2D}{two-dimensions}
 	\acro{3D}{three-dimensions}
+	\acro{BW}{Breit-Wheeler}
+	\acro{CLF}{Central Laser Facility}
+	\acro{CPA}{Chirped Pulse Amplification}
 	\acro{FDTD}{Finite Difference Time Domain}
+	\acro{HB}{Hole boring}
 	\acro{HHG}{High Harmonic Generation}
-	\acro{QED}{Quantum Electro-Dynamics}
+	\acro{OHREX}{ORION High Resolution X-ray}
 	\acro{PIC}{Particle-In-Cell}
+	\acro{QED}{Quantum Electro-Dynamics}
+	\acro{RR}{Radiation Reaction}
+	\acro{SF-QED}{Strong-Field Quantum Electro-Dynamics}
 	\acro{ZVP}{Zero Vector Potential}
 \end{acronym}
 
