--- a/text/ch1-intro.tex
+++ b/text/ch1-intro.tex
@@ -128,7 +128,7 @@ When applied to particles, their speeds are
 \end{equation}
 A relativistic laser pulse will accelerate electrons to relativistic velocities in a fraciton of a laser pulse cycle. Consider an electron in the presence of a uniform electric field of magnitude $a_0 = 100$, an intensity accessible by current state of the art laser facilities. The work done on that particle by the field is 
 \begin{equation}
-	U = (\gamma -1)m_\mathrm{e}c^2 = \int \mathbf{E}\cdot \mathrm{d} \mathbf{x},
+	T = (\gamma -1)m_\mathrm{e}c^2 = \int \mathbf{E}\cdot \mathrm{d} \mathbf{x},
 \end{equation}
 where 
 \begin{equation}
@@ -139,11 +139,11 @@ The field will accelerate an electron to a $\beta = 0.99$, corresponding to $\ga
 \subsection{Conservation of generalised transverse momentum}\label{sec:intro_conservation-generalised-mometum}
 Consider a holonomic system of $N$ relativistic particles under the influence of electromagnetic forces. A particle $j$ with charge $e_j$ and mass $m_\mathrm{j}$ experiences a scalar potential,
 \begin{equation}
-	U_{j} = e_j(\Phi - \mathbf{A} \cdot \mathbf{v}_{j})
+		V_{j} = e_j(\phi - \mathbf{A} \cdot \mathbf{v}_{j})
 \end{equation}
 and hence the system is described by the Lagrangian
 \begin{equation}
-	L = \sum^N_{j=1}\left( - m_\mathrm{j}c^2\sqrt{1-\beta^2_\mathrm{j}} - e_j(\Phi - \mathbf{A} \cdot \mathbf{v}_\mathrm{j}) \right),
+	\mathcal{L} = \sum^N_{j=1}\left( - m_\mathrm{j}c^2\sqrt{1-\beta^2_\mathrm{j}} - e_j(\phi - \mathbf{A} \cdot \mathbf{v}_\mathrm{j}) \right),
 \end{equation}
 where $\beta^2_j = \mathbf{v}_\mathrm{j}\cdot\mathbf{v}_\mathrm{j} /c^2$ and $\mathbf{v}_j = \mathrm{d}\mathbf{x}_j/\mathrm{d}t$ \cite{goldsteinClassicalMechanics2013}.
 The generalised momentum corresponding to coordinate $x_j$ is
@@ -191,11 +191,11 @@ Multi-photon Breit-Wheeler pair production, also known as non-linear Breit-Wheel
 \begin{equation}
 	\gamma + n\omega \to e^- + e^+.
 \end{equation}
-The strength of the effect is dependent on the lorentz invariant photon quantum parameter,
+The strength of the effect is dependent on the Lorentz invariant photon quantum parameter,
 \begin{equation}
 	\chi_\gamma = \frac{\gamma_\gamma}{E_\mathrm{s}} \sqrt{(\mathbf{E}_\perp + \mathbf{c}\times \mathbf{B}^2},
 \end{equation}
-where $E_\mathrm{s} = \qty{1.3e18}{V.m^{-1}}$ is the Schwinger electric field, $\gamma_\gamma = \epsilon_\gamma /m_\mathrm{e}c^2$, the normalised photon energy and $\mathbf{E}_\perp$ the electric field perpendicular to the photon propagation direction. Cite Smilei and say, in a constant E-field, the rate of pair production increases rapidly up to $\chi_\gamma \approx 10$ at which point it saturates and slowly reduces.
+where $E_\mathrm{s} = \qty{1.3e18}{V.m^{-1}}$ is the Schwinger electric field, $\gamma_\gamma = U_\gamma /m_\mathrm{e}c^2$, the normalised photon energy and $\mathbf{E}_\perp$ the electric field perpendicular to the photon propagation direction. Cite Smilei and say, in a constant E-field, the rate of pair production increases rapidly up to $\chi_\gamma \approx 10$ at which point it saturates and slowly reduces.
 
 
 If the electron radiates all its energy to the photon, for the ZVP mechanism, at the point of emission one finds,
