--- a/Oxford_Thesis.tex
+++ b/Oxford_Thesis.tex
@@ -211,7 +211,7 @@
 \startappendices
 % Add or remove any appendices you'd like here:
 \include{text/appendix-1}
-
+\include{text/appendix-2}
 
 %%%%% REFERENCES
 
