--- a/references.bib
+++ b/references.bib
@@ -254,6 +254,13 @@
   langid = {english}
 }
 
+@article{calegariUltrafastElectronDynamics,
+  title = {Ultrafast Electron Dynamics in Phenylalanine Initiated by Attosecond Pulses},
+  author = {Calegari, F and Ayuso, D and Trabattoni, A and Belshaw, L and Camillis, S De and Anumula, S and Frassetto, F and Poletto, L and Palacios, A and Decleva, P and Greenwood, J B and Mart{\'i}n, F and Nisoli, M},
+  langid = {english},
+  file = {/Users/timmis/Zotero/storage/IYR3L2SM/Calegari et al. - Ultrafast electron dynamics in phenylalanine initi.pdf}
+}
+
 @article{cantonoExtensiveStudyElectron2018,
   title = {Extensive Study of Electron Acceleration by Relativistic Surface Plasmons},
   author = {Cantono, Giada and Sgattoni, Andrea and Fedeli, Luca and Garzella, David and R{\'e}au, Fabrice and Riconda, Caterina and Macchi, Andrea and Ceccotti, Tiberio},
@@ -690,6 +697,24 @@
   file = {/Users/timmis/Zotero/storage/PC6FVVKP/2019_gawne_ZVP.pdf}
 }
 
+@article{glinecRadiotherapyLaserPlasma2006,
+  title = {Radiotherapy with Laser-plasma Accelerators: {{Monte Carlo}} Simulation of Dose Deposited by an Experimental Quasimonoenergetic Electron Beam},
+  shorttitle = {Radiotherapy with Laser-plasma Accelerators},
+  author = {Glinec, Y. and Faure, J. and Malka, V. and Fuchs, T. and Szymanowski, H. and Oelfke, U.},
+  year = {2006},
+  month = jan,
+  journal = {Medical Physics},
+  volume = {33},
+  number = {1},
+  pages = {155--162},
+  issn = {0094-2405, 2473-4209},
+  doi = {10.1118/1.2140115},
+  urldate = {2023-09-19},
+  abstract = {The most recent experimental results obtained with laser-plasma accelerators are applied to radiotherapy simulations. The narrow electron beam, produced during the interaction of the laser with the gas jet, has a high charge                              and is quasimonoenergetic                              . The dose deposition is calculated in a water phantom placed at different distances from the diverging electron source. We show that, using magnetic fields to refocus the electron beam inside the water phantom, the transverse penumbra is improved. This electron beam is well suited for delivering a high dose peaked on the propagation axis, a sharp and narrow tranverse penumbra combined with a deep penetration.},
+  langid = {english},
+  file = {/Users/timmis/Zotero/storage/IEKRKZNK/Glinec et al. - 2006 - Radiotherapy with laser‐plasma accelerators Monte.pdf}
+}
+
 @book{goldsteinClassicalMechanics2013,
   title = {Classical {{Mechanics}}},
   author = {Goldstein, Herbert},
@@ -927,6 +952,22 @@
   urldate = {2023-09-06},
   langid = {english},
   file = {/Users/timmis/Zotero/storage/A2PY7H8N/Kemp et al. - 2009 - Hot-electron energy coupling in ultraintense laser.pdf}
+}
+
+@article{khrennikovTunableAllOpticalQuasimonochromatic2015,
+  title = {Tunable {{All-Optical Quasimonochromatic Thomson X-Ray Source}} in the {{Nonlinear Regime}}},
+  author = {Khrennikov, K. and Wenz, J. and Buck, A. and Xu, J. and Heigoldt, M. and Veisz, L. and Karsch, S.},
+  year = {2015},
+  month = may,
+  journal = {Physical Review Letters},
+  volume = {114},
+  number = {19},
+  pages = {195003},
+  issn = {0031-9007, 1079-7114},
+  doi = {10.1103/PhysRevLett.114.195003},
+  urldate = {2023-09-19},
+  langid = {english},
+  file = {/Users/timmis/Zotero/storage/X66P9TN5/Khrennikov et al. - 2015 - Tunable All-Optical Quasimonochromatic Thomson X-R.pdf}
 }
 
 @article{kimHighharmonicGenerationFlat2023,
@@ -1305,6 +1346,22 @@
   file = {/Users/timmis/Zotero/storage/8TDZSFCK/PhysRevLett.103.235001.pdf}
 }
 
+@article{morimotoDiffractionMicroscopyAttosecond2018,
+  title = {Diffraction and Microscopy with Attosecond Electron Pulse Trains},
+  author = {Morimoto, Yuya and Baum, Peter},
+  year = {2018},
+  month = mar,
+  journal = {Nature Physics},
+  volume = {14},
+  number = {3},
+  pages = {252--256},
+  issn = {1745-2473, 1745-2481},
+  doi = {10.1038/s41567-017-0007-6},
+  urldate = {2023-09-19},
+  langid = {english},
+  file = {/Users/timmis/Zotero/storage/ZLR3HT5Y/Morimoto and Baum - 2018 - Diffraction and microscopy with attosecond electro.pdf}
+}
+
 @article{nuterMaxwellSolversSimulations2014,
   title = {Maxwell Solvers for the Simulations of the Laser-Matter Interaction},
   author = {Nuter, Rachel and Grech, Mickael and Gonzalez De Alaiza Martinez, Pedro and Bonnaud, Guy and {d'Humi{\`e}res}, Emmanuel},
@@ -1490,6 +1547,21 @@
   howpublished = {https://www.scarf.rl.ac.uk}
 }
 
+@article{schumakerUltrafastElectronRadiography2013,
+  title = {Ultrafast {{Electron Radiography}} of {{Magnetic Fields}} in {{High-Intensity Laser-Solid Interactions}}},
+  shorttitle = {Computational Science-{{ICCS}} 2002},
+  author = {Schumaker, W},
+  year = {2013},
+  journal = {Physical Review Letters},
+  volume = {110},
+  number = {015003},
+  doi = {10.1103/PhysRevLett.110.015003},
+  langid = {english},
+  lccn = {QA75.5 .I13 2002},
+  keywords = {Computational complexity,Computer science,Congresses},
+  file = {/Users/timmis/Zotero/storage/Z7QXW66E/Sloot - 2002 - Computational science-ICCS 2002 international con.pdf}
+}
+
 @article{serebryakovNearsurfaceElectronAcceleration2017,
   title = {Near-Surface Electron Acceleration during Intense Laser-Solid Interaction in the Grazing Incidence Regime},
   author = {Serebryakov, D. A. and Nerush, E. N. and Kostyukov, I. Yu},
@@ -1662,6 +1734,18 @@
   langid = {english},
   lccn = {630},
   file = {/Users/timmis/Zotero/storage/FLJ38ZBW/Chen - 2005 - The electrical engineering handbook.pdf;/Users/timmis/Zotero/storage/YVLPDLHJ/e2014-50162-y.pdf}
+}
+
+@article{takahashiNonlinearAttosecondMetrology2015,
+  title = {Nonlinear {{Attosecond Metrology}} by {{Intense Isolated Attosecond Pulses}}},
+  author = {Takahashi, Eiji J and Lan, Pengfei and Mucke, Oliver D and Nabekawa, Yasuo and Midorikawa, Katsumi},
+  year = {2015},
+  journal = {IEEE JOURNAL OF SELECTED TOPICS IN QUANTUM ELECTRONICS},
+  volume = {21},
+  number = {5},
+  abstract = {For the future progress of nonlinear attosecond science, one of the most important issues is the development of highenergy isolated attosecond pulse sources. In this paper, we review our research on the energy-scaling method for isolated attosecond pulse generation, which combines infrared two-color gating and an energy-scaling method of high-order harmonic generation. By establishing the robust energy-scaling method, the maximum pulse energy of the isolated attosecond pulse reaches 1.3 {$\mu$}J/pulse in the XUV region, which is almost 100-fold higher than the values ever reported before. The pulse duration of this isolated attosecond pulse is directly measured to be 500 as by the autocorrelation method using the nonlinear interaction of N2 . This nonlinear experiment clearly shows that our developed isolated attosecond pulse has enough pulse energy to make a breakthrough for nonlinear attosecond metrology as well as for attosecond-pump/attosecondprobe experiments investigating electronic processes. In addition, we further extend the high-energy harmonic continuum by using the infrared two-color gating method up to the soft-x-ray region. With the aim to temporally characterize an isolated attosecond pulse in the soft-x-ray region, we demonstrate the first observation of above-threshold ionization of He with two-photon absorption of multiple higher harmonics in the soft-x-ray region.},
+  langid = {english},
+  file = {/Users/timmis/Zotero/storage/N2ZJD8PC/Takahashi et al. - 2015 - Nonlinear Attosecond Metrology by Intense Isolated.pdf}
 }
 
 @article{tanakaCurrentStatusHighlights2020,
