--- a/text/ch2-zvp.tex
+++ b/text/ch2-zvp.tex
@@ -19,7 +19,7 @@ Of primary interest in this thesis is the interaction of a relativistically inte
 
 %At some point I should briefly chat about other absorption models (I think at the end of the intro - this will also include the stuff above. - Then I will start this chapter by talking about the case where JxB does not apply. ALso in the intro specify that for an overdense plasma, the laser does not propagate and must be reflected and hence we are generally talking about a laser-plasma surface interaction and the implications thereof.) Before this point I also want to discuss preplasmas.
 
-Laser energy absorption in dense plasmas was first proposed by Wilks and Kruer \cite{wilksAbsorptionUltraIntenseLaser1992}, via a ponderomotive mechanism where plasma electrons are heated directly by the laser pulse via the so-called $\mathbf{J}\times \mathbf{B}$ force. This thesis is interested in the `post-ponderomotive' regime where the frequency of the relativistic plasma oscillations ($\omega_\mathrm{p} \sim \sqrt{S}$) are greater than the $\mathbf{J}\times \mathbf{B}$ induced plasma electron oscillations at $2\omega_\mathrm{L}$. The plasma electrons' response is then fast enough to compensate the ponderomotive pressure of the laser pulse with the formation of electrostatic fields between electrons and ions and so respond adiabatically to the applied $\mathbf{J}\times \mathbf{B}$ force. Hence, plasma electrons cannot be heated directly by the laser pulse. Interestingly, working through this condition suggests the criterion for the \ac{ZVP} regime is $S > 4$, slightly more constraining than $S>1$ as is typically stated for the \ac{ZVP} regime \cite{savinModellingLaserPlasmaInteractions2019}. The resolution comes from understanding the plasma response. The bulk plasma must have $S>1$ to prevent relativistic transparency and so ensure a laser-surface interaction. Then the ponderomotive pressure of the laser is able to compress the front surface to densities such that the overdensity condition is satisfied. Note that to neglect the pre-adiabatic formation phase requires a sufficiently steep density gradient around the relativistic critical density surface (where $S=1$) to shift the main interaction to a region where this condition on the overdensity is satisfied. Pre-plasma formation and scale length will be discussed in great detail in a later chapter.
+Laser energy absorption in dense plasmas was first proposed by Wilks and Kruer \cite{wilksAbsorptionUltraIntenseLaser1992}, via a ponderomotive mechanism where plasma electrons are heated directly by the laser pulse via the so-called $\mathbf{J}\times \mathbf{B}$ force. This thesis is interested in the `post-ponderomotive' regime where the frequency of the relativistic plasma oscillations ($\omega_\mathrm{p} \sim \sqrt{S}$) are greater than the $\mathbf{J}\times \mathbf{B}$ induced plasma electron oscillations at $2\omega_\mathrm{L}$. The plasma electrons' response is then fast enough to compensate the ponderomotive pressure of the laser pulse with the formation of electrostatic fields between electrons and ions and so respond adiabatically to the applied $\mathbf{J}\times \mathbf{B}$ force. Hence, plasma electrons cannot be heated directly by the laser pulse. Interestingly, working through this condition suggests the criterion for the \ac{ZVP} regime is $S > 4$, slightly more constraining than $S>1$ as is typically stated for the \ac{ZVP} regime \cite{savinModellingLaserPlasmaInteractions2019}. The resolution comes from understanding the plasma response. The bulk plasma must have $S>1$ to prevent relativistic transparency and so ensure a laser-surface interaction. Then the ponderomotive pressure of the laser is able to compress the front surface to densities such that the overdensity condition is satisfied. Note that to neglect the pre-adiabatic formation phase requires a sufficiently steep density gradient around the relativistic critical density surface (where $S=1$) to shift the main interaction to a region where this condition on the overdensity is satisfied. Pre-plasma formation and scale length will be discussed in great detail in the following chapter. Suffice to say the technology exists to control this phenomenon. 
 
 Provided all conditions are met, the ponderomotive pressure of the laser compresses the electrons at the front surface of the plasma and so shifts the laser-plasma surface interaction to plasma densities well beyond the relativistic critical density, leaving in its wake a positive space charge. This electron-ion charge separation leads to the formation of a \textit{pseudo-capacitor} electrostatic field. So we have entered a regime of adiabaticity where the plasma skin layer is confined within a potential well consisting of the ponderomotive pressure and the Coulomb potential of the pseudocapacitor field. Thus is formed a high density and spatially thin electron bunch (sometimes referred to as an electron sheath in the literature \cite{gonoskovUltrarelativisticNanoplasmonicsRoute2011}) at the plasma surface.
 
@@ -407,16 +407,7 @@ The thickness of the target does not impact the interaction and is chosen for co
 The plasma specifications were chosen to minimise computational load while ensuring numerical convergence, requiring over 100 billion macroparticles. The electron temperature is raised significantly higher than that which would be expected in such a laser-plasma system so as to resolve the Debye length. Anticipated plasma temperatures are calculated using 1D HYADES simulations in the following chapter. While this temperature is unphysical and will lead to some small plasma expansion over course of the simulation, the temperature remains negligible compared to that imparted to the electron bunches by the laser pulse. The striking similarity between the 2 and 3D simulation results is a natural consequence of the 2D nature of the interaction geometry. It is however still reassuring to note that previous work withstands the stringent test of the real universe geometry and not lost in the chaos.
 
 \subsubsection{Convergence of 3D simulations}
-The 3D simulation parameters were chosen to be consistent with previous work on the \ac{ZVP} mechanism, however, such simulations are cumbersome, limiting the number of simulations it is feasible to run. In order to query the defining characteristics outlined by Baeva, a lower resolution simulation was performed with similar parameters to the initial simulation.
-% TODO: \usepackage{graphicx} required
-\begin{figure}
-	\centering
-	\includegraphics[width=1\linewidth]{figures/zvp/zvp_3D_compare_lowres}
-	\caption[Comparison between the initial 3D simulation and a lower resolution version.]{Comparison between the initial 3D simulation and a lower resolution version. a) Electron number density. b) Kinetic energy density. c) and d) are slices of a) and b) respectively. $i$) Initial simulation. $ii$) Lower resolution simulation. Good convergence is demonstrated.}
-	\label{fig:zvp3dcomparelowres}
-\end{figure}
-The two simulations are compared in figure \ref{fig:zvp3dcomparelowres}. Good convergence is qualitatively demonstrated by the presence of characteristic features of the ZVP mechanism. While the instabilities are similar in structure, the change in seeding changes their exact positions. As instabilities are not the focus of this thesis this variation is of no concern. Note that while general characteristics remain similar, some caution is advisable when considering quantitative results.
-
+The 3D simulation parameters were chosen to be consistent with previous work on the \ac{ZVP} mechanism, however, such simulations are cumbersome, limiting the number of simulations it is feasible to run. In order to query the defining characteristics outlined by Baeva, a lower resolution simulation was performed with similar parameters to the initial simulation. Comparisons between the simulation outputs are made in figure \ref{fig:zvp3dcomparelowres} in appendix blah. Good convergence is qualitatively demonstrated by the presence of characteristic features of the ZVP mechanism. While the instabilities are similar in structure, the change in seeding changes their exact positions. As instabilities are not the focus of this thesis this variation is of no cause for concern, however, while the characteristics remain similar, some caution must be taken with quantitative results.
 
 \subsubsection{Confirmation of ZVP in 3D}
 Figure \ref{fig:zvppropagatingzero} tracks the tranverse momentum distribution along the polarisation axis of the laser pulse of an electron bunch during its ablative journey, clearly demonstrating the existence of a singular zero of the vector potential propagating through the electron bunch.
@@ -484,13 +475,15 @@ Equation \ref{eq:zvp_N} can be rewritten in terms of fundamental constants as
 \begin{equation}\label{eq:zvp_N2}
 	N = 2 (1+0.5\frac{a^2_0}{\bar{n}_\mathrm{e}}) L_z \frac{m_\mathrm{e}\epsilon_0c^2}{e^2}.
 \end{equation}
-Almost counterintuitively, it would appear the total charge scales inversely with the plasma density. Instead, charge can be increased either by increasing the laser pulse intensity or $L_z$. Indeed, provided the laser pulse intensity remains relativistic, the focal spot can be increased indefinitely and there is no limit to the mass-limited electron bunch total charge. For a realistic laser pulse with beam width $10 \lambda$ incident on a larger laser block, equation \ref{eq:zvp_N2} predicts a charge of 9.3 nC.
+Counter-intuitively, it would appear the total charge scales inversely with the plasma density. Instead, charge can be increased either by increasing the laser pulse intensity or $L_z$. Indeed, provided the laser pulse intensity remains relativistic, the focal spot can be increased indefinitely and there is no limit to the mass-limited electron bunch total charge. For a realistic laser pulse with beam width $10 \lambda$ incident on a larger laser block, equation \ref{eq:zvp_N2} predicts a charge of 9.3 nC.
 
+Figure blah blah compares the electron bunch energy to an equivalent\footnote{A circularly polarised laser pulse will expel electrons from a mass-limited target in a corkscrew shape, the bunch is therefore only loosely equivalent.} bunch produced by a circularly polarised laser pulse. The mean electron bunch energy is over three times lower as there is no ZVP acceleration phase and there is no quasi-monochromatic nature \cite{baevaZeroVectorPotential2011}. 
 
-Discuss use cases of the electron bunches.
-DIscuss if  bunch quasi-monoenergetic.
+\subsubsection{Applications: from electron bunches to attosecond light}
+There are a plethora of applications for high charge, attosecond electron bunches, primarily enabling the resolution of attosecond scale phenomena \cite{krauszAttosecondPhysics2009}. Already femtosecond pump, attosecond probe experiments are underway \cite{calegariUltrafastElectronDynamics,takahashiNonlinearAttosecondMetrology2015} but the higher intensities and charge densities accessible in the laser-solid regime compared to laser-gas interactions \cite{edwardsXRayEmissionEffectiveness2020, linIsolatedAttosecondElectron2020} would dramatically advance the field by enabling atto-pump atto-probe experiments \cite{zhangGiantIsolatedAttosecond2020}. Potential applications include: electron microscopy and atomic diffraction to temporally resolve photoelectric processes such as Bragg diffraction \cite{morimotoDiffractionMicroscopyAttosecond2018}, ultra-fast electron radiography to probe the evolution of the formation of magnetic fields in dynamical systems \cite{schumakerUltrafastElectronRadiography2013} or for XFEL seeding \cite{cardenasSubcycleDynamicsRelativistic2019}. The record XFEL X-ray pulse duration is 280 attoseconds \cite{durisTunableIsolatedAttosecond2020}, substantially longer than the durations accessible using this technique. Electron bunches are also a promising alternative for radiotherapy due to their superior penetration depth in biotissues compared to X-rays \cite{glinecRadiotherapyLaserPlasma2006}.
 
-Figure blah blah compares the electorn bunch energy to an equivalent\footnote{A circularly polarised laser pulse will expel electrons from a mass-limited target in a corkscrew shape, the bunch is therefore only loosely equivalent.} bunch produced by a circularly polarised laser pulse. The mean electron bunch energy is over three times lower as there is no ZVP acceleration phase and there is no quasi-monochromatic nature \cite{baevaZeroVectorPotential2011}. 
+Analogously to the \ac{HHG} process, rapid acceleration of an electron bunch generates a burst of radiation whose properties (brightness, coherency, duration, spectrum) are determined by the corresponding properties of the electron bunch (charge, emittance, duration and energy). Thus globally electron bunches are used as a diagnostic tool in synchrotrons and XFELs. Other acceleration mechanisms for X-ray generation include: bremmstrahlung radiation from firing the electron bunch at a secondary high-$Z$ target \cite{cordeFemtosecondRaysLaserplasma2013}, interaction with a counter-propagating laser pulse \cite{khrennikovTunableAllOpticalQuasimonochromatic2015,kulaginNonlinearReflectionHighamplitude2016} or injection into a laser or plasma wakefield accelerator\textbf{CITE}, including accessing the solid density plasma wakefield regime \cite{linIsolatedAttosecondElectron2020}. The mass-limited electron bunches produced via the ZVP mechanism have transverse emittances comparable in all planes to those conditioned in state-of-the-art nano-Coulomb electron bunch accelerators \cite{martinDiamondLightSource2020,pingProgressHEPSProject2020}. Such facilities typically produce electron bunches with geometric emittances of $\sim \unit{mm.rad}$ prior to damping ring injection \cite{christouPreInjectorLinacDiamond2004} and $\sim \unit{nm.rad}$ post-injection \cite{martinDiamondLightSource2020}. Thus, the mass-limited ZVP electron bunches are ideal candidates for the production of bright X-rays of unprecedentedly short duration enabling the study of a new regime of attosecond science with applications to physical, chemical and biological systems.
+
 
 \subsubsection{Parameter scan of electron bunch mean energy}
 Since ZVP energy scaling is a fundamental identifier of ZVP bunches, it is important to confirm that mass-limited electron bunches follow the same scaling relations as has previously been confirmed for bulk ZVP electrons in both 1D \cite{baevaZeroVectorPotential2011} and 2D \cite{savinAttosecondscaleAbsorptionExtreme2017} PIC simulations. The mean mass-limited electron bunch kinetic energies were extracted from 120 2D PIC simulations and are plotted in figure \ref{fig:zvpmeangammas}. 
